@@ -3,7 +3,6 @@ package _02_map;
 // Rechne die gegebenen Temperaturen mithilfe einer Lambda Funktion in Fahrenheit um (Temperatur * 1.8 + 32)
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Exercise {
     public static void main(String[] args) {
@@ -11,7 +10,7 @@ public class Exercise {
 
         List<Double> temperature_fahrenheit = temperatures_celsius.stream()
                                                 .map(c -> (c * 9.0 / 5) + 32)
-                                                .collect(Collectors.toList());
+                                                .toList();
 
         System.out.println(temperature_fahrenheit);
     }
