@@ -1,7 +1,6 @@
 package _05_filter;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Example {
     public static void main(String[] args) {
@@ -9,7 +8,7 @@ public class Example {
 
         List<Integer> high_temperatures = temperatures_celsius.stream()
                                             .filter(temp -> temp > 25)
-                                            .collect(Collectors.toList());
+                                            .toList();
 
         System.out.println(high_temperatures);
     }
